# openstates-core

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  .~lock.sample.csv#  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  README.md  RELEASE.md  demo.py  django-admin.sh  docker-compose.yml  extract.py  local.env  mypy.ini  pyproject.toml  requirements.txt  run-tests.sh  sample.csv  sample.py  setup.cfg  setup.py  text_extract.py  tox.ini
.circleci/: config.yml
.github/workflows/: build-scrapers.yml  docker.yml  lint.yml  pypi.yml  release.yml  test.yml
creation/: create_data.sh  jurisdictions.csv  write_data.py
data/: ak.yml  al.yml  ar.yml  az.yml  ca.yml  co.yml  ct.yml  dc.yml  de.yml  fl.yml  ga.yml  hi.yml  ia.yml  id.yml  il.yml  in.yml  ks.yml  ky.yml  la.yml  ma.yml  md.yml  me.yml  mi.yml  mn.yml  mo.yml  ms.yml  mt.yml  nc.yml  nd.yml  ne.yml  nh.yml  nj.yml  nm.yml  nv.yml  ny.yml  oh.yml  ok.yml  or.yml  pa.yml  pr.yml  (+12 more)
extract/: __init__.py  az.py  ca.py  common.py  de.py  fl.py  hi.py  utils.py
opencivicdata/tests/: conftest.py
openstates/: exceptions.py  settings.py  test_settings.py
openstates/cli/: committees.py  convert_us.py  initdb.py  legacy_people_to_yaml.py  makemigrations.py  people.py  people_repo_update.py  relationships.py  reports.py  scrape.py  text_extract.py  to_yaml.py  update.py  update_computed.py  validate.py
openstates/data/: common.py
openstates/fulltext/: .dockerignore  Dockerfile  README.md  __init__.py  common.py  de.py  docker-compose.yml  pyproject.toml  text_extract.py  utils.py
openstates/importers/: __init__.py  _types.py  base.py  bills.py  computed_fields.py  events.py  jurisdiction.py  memberships.py  organizations.py  people.py  posts.py  vote_events.py
openstates/metadata/: README.md.sample  __init__.py  models.py  pyproject.toml.example  pyproject.toml.sample
openstates/models/: __init__.py  committees.py  common.py  people.py
openstates/reports/: admin.py  models.py
openstates/scrape/: __init__.py  base.py  bill.py  event.py  jurisdiction.py  popolo.py  vote_event.py
openstates/utils/: __init__.py  ansistrm.py  django.py  generic.py  instrument.py  metadata.py  topsort.py  transformers.py
openstates_core/: exceptions.py  settings.py  test_settings.py
openstates_core/cli/: __main__.py  reports.py  update.py
openstates_core/importers/: base.py  bills.py  jurisdiction.py  organizations.py  people.py  vote_events.py
openstates_core/reports/: session.py
openstates_core/scrape/: base.py  event.py  jurisdiction.py
openstates_core/utils/: django.py
openstates_metadata/: __init__.py  data.py  models.py
openstates_metadata/_creation/: orgs.csv  write_data.py
openstates_metadata/data/: __init__.py  ak.py  al.py  ar.py  az.py  ca.py  co.py  ct.py  dc.py  de.py  fl.py  ga.py  hi.py  ia.py  id.py  il.py  in.py  ind.py  ks.py  ky.py  la.py  legacy_districts.py  ma.py  md.py  me.py  mi.py  mn.py  mo.py  ms.py  mt.py  nc.py  nd.py  ne.py  nh.py  nj.py  nm.py  nv.py  ny.py  oh.py  ok.py  (+16 more)
openstates_metadata/tests/: test_data.py  test_helpers.py
pupa/: admin.py  models.py  settings.py  test_settings.py
pupa/importers/: base.py  bills.py  events.py  memberships.py  organizations.py  posts.py  vote_events.py
pupa/migrations/: 0001_initial.py  0002_auto_20150906_1458.py  0003_auto_20151118_0408.py  0004_identifier.py  0005_auto_20170522_1935.py  0006_identifier_jurisdiction.py  0007_sessiondataqualityreport.py
pupa/reports/: models.py  session.py
pupa/scrape/: base.py  bill.py  event.py  jurisdiction.py  popolo.py  vote_event.py
pupa/tests/: django_settings.py
pupa/utils/: generic.py
raw/: ak.csv  al.csv  co.csv  de.csv  hi.csv  ia.csv  id.csv  il.csv  ks.csv  ky.csv  ma.csv  md.csv  me.csv  mn.csv  mo.csv  nc.csv  ne.csv  nh.csv  nj.csv  pr.csv  sc.csv  va.csv  vt.csv
text/ak/: 30-HB 110-HB0110B.html.txt  30-HB 122-HB0122A.html.txt  30-HB 159-HB0159A.html.txt  30-HB 159-HB0159B.html.txt  30-HB 159-HB0159C.html.txt  30-HB 159-HB0159E.html.txt  30-HB 168-HB0168A.html.txt  30-HB 168-HB0168Z.html.txt  30-HB 172-HB0172B.html.txt  30-HB 198-HB0198A.html.txt  30-HB 233-HB0233A.html.txt  30-HB 233-HB0233C.html.txt  30-HB 233-HB0233D.html.txt  30-HB 342-HB0342A.html.txt  30-HB 351-HB0351A.html.txt  30-HB 351-HB0351B.html.txt  30-HB 353-HB0353A.html.txt  30-HB 355-HB0355B.html.txt  30-HB 355-HB0355C.html.txt  30-HB 4-HB0004A.html.txt  30-HB 46-HB0046B.html.txt  30-HB 5-HB0005B.html.txt  30-HB 56-HB0056Z.html.txt  30-HB 65-HB0065A.html.txt  30-HB 95-HB0095A.html.txt  30-SB 104-SB0104A.html.txt  30-SB 104-SB0104B.html.txt  30-SB 104-SB0104C.html.txt  30-SB 104-SB0104D.html.txt  30-SB 104-SB0104E.html.txt  30-SB 104-SB0104Z.html.txt  30-SB 125-SB0125A.html.txt  30-SB 125-SB0125B.html.txt  30-SB 160-SB0160A.html.txt  30-SB 161-SB0161A.html.txt  30-SB 166-SB0166A.html.txt  30-SB 167-SB0167A.html.txt  30-SB 179-SB0179A.html.txt  30-SB 198-SB0198A.html.txt  30-SB 2-SB0002A.html.txt  (+10 more)
text/al/: 2017rs-HB 250-Engrossed.pdf.txt  2017rs-HB 250-Introduced.pdf.txt  2017rs-HB 254-Introduced.pdf.txt  2017rs-HB 289-Introduced.pdf.txt  2017rs-HB 304-Introduced.pdf.txt  2017rs-HB 305-Engrossed.pdf.txt  2017rs-HB 35-Introduced.pdf.txt  (+92 more)
(+1486 files in other folders)
