[tool.poetry]
name = "openstates"
version = "6.10.1"
description = "core infrastructure for the openstates project"
authors = ["James Turk <james@openstates.org>"]
license = "MIT"

[tool.poetry.scripts]
os-update = 'openstates.cli.update:main'
os-initdb = 'openstates.cli.initdb:main'
os-update-computed = 'openstates.cli.update_computed:main'
os-text-extract = 'openstates.cli.text_extract:main'
os-people = 'openstates.cli.people:main'
os-committees = 'openstates.cli.committees:main'
os-us-to-yaml = 'openstates.cli.convert_us:main'
os-scrape = 'openstates.cli.scrape:main'

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.8.4"
dj_database_url = "^0.5.0"
Django = "^3.2.0"
scrapelib = "^2.0.2"
jsonschema = "^3.2.0"
pytz = "^2019.3"
click = "^7.1.1"
attrs = "^20.2.0"
us = "^2.0.2"
PyYAML = "^5.3.1"
textract = "^1.6"
chardet = "^3.0"
pydantic = "^1.8.2"
boto3 = "^1.17.79"
spatula = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-django = "^3.8.0"
coveralls = "^1.11.1"
flake8 = "^3.7.9"
coverage = {extras = ["toml"], version = "^5.0.4"}
black = "^20.8b1"
mypy = "^0.900"
types-pytz = "^2021.1.0"
types-click = "^7.1.2"
types-PyYAML = "^5.4.3"
types-requests = "^2.25.0"

[tool.coverage.run]
omit = [
  "openstates/data/admin/*",
  "openstates/utils/ansistrm.py",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
